<resources>
    <string name="app_name">musicapp</string>
    <string name="logo" translatable="false">Compact Music creator</string>
    <string name="alreadyRecordTracks">Already recorded tracks</string>
    <string name="ownMusicButton">Take your own music</string>
    <string name="ownMusicSearchText">Search your music</string>
    <string name="youtubeMusicSearchText">Add your youtube link </string>
    <string name="dialogHeader">Be careful!</string>
    <string name="dialogWarning">Due to the fact that you have not given permission to use your files or voice recordings, the application will not be able to perform all the functionality. If you want to fix it, click the button below.</string>
    <string name="permissionRequestButton">Request permission</string>
    <string name="SearchText">Search your song</string>
    <string name="ownSongName">Name of your song</string>
    <string name="startRecordButton">Press to start record</string>
    <string name="finishRecordButton">Press to finish it</string>
    <string name="resetButton">Press to reset recorder</string>
    <string name="emailTxt">Email Address</string>
    <string name="passwordTxt">Password</string>
    <string name="loginTxt">Login</string>
    <string name="forgetPasswordTxt">Forget Password</string>
    <string name="registerTxt">Register</string>
    <string name="loadDialog">Loading...</string>
    <string name="downloadButton">Download result</string>
    <string name="shareButton">Share with friends</string>
    <string name="backToMainPageButton">Back to main page</string>
    <string name="voiceSeekBar">The volume of your voice</string>
    <string name="songSeekBar">The volume of your song</string>
    <string name="logOutTxt">Logout</string>
    <string name="singInWithGoogleButton">Sing in with Google</string>
    <string name="headphonesWarningText">For the best recording, put on headphones, otherwise possible interference.</string>
    <string name="goBackButton">Go back</string>
    <string name="resetPasswordTxt">You will be sent an email to reset your password</string>
    <string name="enterEmailEditText">Enter your email</string>
    <string name="enter">Enter</string>
    <string name="resetEmailDialogTxt">Check your email to reset your password.</string>
    <string name="verificationEmail">Please check your email to verified your account!</string>
    <string name="internetConnectionDialogTxt">You are not connected to the Internet! Please connect to the Internet.</string>
    <string name="listIsEmpty">The music folder on your phone is empty</string>Strings
    <string name="buttonHint">Here will be your recorded tracks</string>
    <string name="searchFileManually">Search file in the another folder</string>
</resources>