<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_default"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/monofett"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="40sp" />

    <Button
        android:id="@+id/alreadyRecordedSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100sp"
        android:layout_marginRight="50dp"
        android:background="@drawable/default_button"
        android:text="@string/alreadyRecordTracks"
        android:textColor="@color/background"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/ownMusicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alreadyRecordedSongs"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="50dp"
        android:background="@drawable/default_button"
        android:textColor="@color/background"
        android:text="@string/ownMusicButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/requestPermissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ownMusicButton"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50sp"
        android:layout_marginRight="50dp"
        android:background="@drawable/default_button"
        android:textColor="@color/background"
        android:text="@string/permissionRequestButton"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/logoutTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestPermissionButton"
        android:layout_marginTop="150dp"
        android:text="@string/logOutTxt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>