<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Register">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/monofett"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/purple"
        android:hint="@string/emailTxt"
        android:inputType="textEmailAddress"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTxt"
        android:hint="@string/passwordTxt"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTxt"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button1"
        android:text="@string/registerTxt" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>