<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".OwnMusic">

    <SearchView
        android:id="@+id/searchOwnMusic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/visor"
        android:backgroundTint="@color/purple"
        android:hint="@string/SearchText" />

    <ListView
        android:id="@+id/listViewSong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchOwnMusic"
        android:background="@color/background" />

    <Button
        android:id="@+id/searchFileManually"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/default_button_with_stroke"
        android:text="@string/searchFileManually"
        android:onClick="fileChooser"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/emptyListTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/listIsEmpty"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/purple"
        android:visibility="gone"/>

    </RelativeLayout>